feat: Add weather, regions, countries, and cities components with routing
- Implemented routing for weather, regions, countries, and cities components.
- Created cities component with HTML, CSS, and TypeScript files.
- Developed countries component with corresponding HTML, CSS, and TypeScript files.
- Added regions component with its own HTML, CSS, and TypeScript files.
- Enhanced app component to include RouterLink and RouterLinkActive for navigation.
- Added loading states and error handling in weather component.
- Implemented search functionality in weather component for location lookup.
- Created unit tests for all new components to ensure functionality.
- Updated global styles for better UI consistency and responsiveness.

--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,7 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+            "outputPath": "dist/tarea02",
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
@@ -30,6 +31,12 @@
           },
           "configurations": {
             "production": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
               "budgets": [
                 {
                   "type": "initial",
