--- a/.gitignore
+++ b/.gitignore
@@ -41,5 +41,6 @@ __screenshots__/
 # System files
 .DS_Store
 Thumbs.db
-environment.ts
-environment.prod.ts
+# Ignorar environments
+src/environments/environment.ts
+src/environments/environment.prod.ts
